8 August 2005 Sylvain Pion
- Homogeneous_base : define nested types Orientation/Oriented_side/Bool/...
  using Same_uncertainty.

1 August 2005 Sylvain Pion
- Homogeneous_converter : specialize when same_type<K1, K2>.

1 August 2005 Sylvain Pion
- Remove K::make_FT and K::FT_{numerator|denominator}
  (replaced by Rational_traits).

20 July 2005 Andreas Fabri
- Added qualified_result_type

24 June 2005 Andreas Fabri
- Removed  #ifndef CGAL_NO_DEPRECATED_CODE for Construct_vector_2 and Construct_direction_2

18 June 2005 Andreas Fabri
- Moved code from Kernel_class_2 to the functors

19 May 2005 Sylvain Pion
- Add centroid(Triangle_[23]) and centroid(Tetrahedron_3).

11 May 2005 Sylvain Pion
- New predicate : orientation(2 Vector_2).

8 March 2005 Sylvain Pion
- Fix for mpz_class : no implicit conversion from expression-template
  to Quotient<mpz_class>, it seems.

=============================== CGAL 3.1 ========================

11 August 2004 Sylvain Pion
- Qualify min/max calls by CGAL_NTS.

22 June 2004 Sylvain Pion
- Undeprecate construction functors from NTs.

20 June 2004 Sylvain Pion
- Add missing this->.
- Replace some CGAL:: by CGAL_NTS.

20 May 2004 Sylvain Pion
- Add forgotten #include<CGAL/Bbox_[23].h>.

19 May 2004 Andreas Fabri
- The global_operators from VectorH2.h are turned into function objects

19 May 2004 Sylvain Pion
- Homogeneous_converter : add conversions for RT, FT, Bbox_2 and Bbox_3.

16 March 2004 Andreas Fabri
- Move the following to the new scheme :
  signed_distance_to_{point,line_plane}

13 Mar 2004 Sylvain Pion
- Move centroid() to the new scheme.

13 Mar 2004 Sylvain Pion
- Use LineC3 instead of LineH3.
- Merge Construct_line_3 between H&C.
- Duplicate Construct_projected_point_3 between H&C.

13 Mar 2004 Sylvain Pion
- Factorize identical Coplanar_3 functors between H&C.
- Move to the new scheme :
  orientation(4 Point_3), coplanar(4 Point_3),
  are_positive_oriented(4 Point_3), are_negative_oriented(4 Point_3),