@@ -164,53 +164,7 @@ typename R::Point_2
 PointH2<R>::transform(const typename PointH2<R>::Aff_transformation_2& t) const
 { return t.transform(static_cast<const typename R::Point_2 &>(*this)); }
 
-#ifndef CGAL_NO_OSTREAM_INSERT_POINTH2
-template < class R >
-std::ostream &
-operator<<(std::ostream &os, const PointH2<R> &p)
-{
-  switch(os.iword(IO::mode))
-  {
-    case IO::ASCII :
-        return os << p.hx() << ' ' << p.hy() << ' ' << p.hw();
-    case IO::BINARY :
-        write(os, p.hx());
-        write(os, p.hy());
-        write(os, p.hw());
-        return os;
-    default:
-        return os << "PointH2(" << p.hx() << ", "
-                                << p.hy() << ", "
-                                << p.hw() << ')';
-  }
-}
-#endif // CGAL_NO_OSTREAM_INSERT_POINTH2
 
-#ifndef CGAL_NO_ISTREAM_EXTRACT_POINTH2
-template < class R >
-std::istream &
-operator>>(std::istream &is, PointH2<R> &p)
-{
-  typename R::RT hx, hy, hw;
-  switch(is.iword(IO::mode))
-  {
-    case IO::ASCII :
-        is >> hx >> hy >> hw;
-        break;
-    case IO::BINARY :
-        read(is, hx);
-        read(is, hy);
-        read(is, hw);
-        break;
-    default:
-        std::cerr << "" << std::endl;
-        std::cerr << "Stream must be in ascii or binary mode" << std::endl;
-        break;
-  }
-  p = PointH2<R>(hx, hy, hw);
-  return is;
-}
-#endif // CGAL_NO_ISTREAM_EXTRACT_POINTH2
 
 CGAL_END_NAMESPACE
 
