@@ -1,3 +1,7 @@
+7 September 2005 Andreas Fabri
+- Added Qualified_result_types
+- Moved insert and extract operators for streams of Point, Line, and Circle to Kernel_23
+
 8 August 2005 Sylvain Pion
 - Homogeneous_base : define nested types Orientation/Oriented_side/Bool/...
   using Same_uncertainty.
